fixed alignment and changed narrative text piechart

--- a/home.css
+++ b/home.css
@@ -17,7 +17,7 @@ body {
 /* Scroll container remains fixed at 300px wide */
 #scroll-container {
   width: 300px;
-  height: 80%;
+  height:30%;
   overflow-y: scroll;
   border: 5px solid #ccc;
   margin-top: 80px;
@@ -104,7 +104,7 @@ body {
 
 .to-index {
   float: left;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 .to-index:hover {
